# yt-rag-assistant

./: .dockerignore  .env.example  .funcignore  .gitignore  Dockerfile  MPNET_WINDOWS_ISSUE.md  README.md  api.py  deploy_frontend.sh  explorations.ipynb  function_app.py  ingestion.py  ingestion_gemini_chunked.py  ingestion_gemini_whole.py  ingestion_mpnet_whole.py  ingestion_unified.py  pyproject.toml  query_metadata.py  requirements.txt  test_rag_gemini.py  test_rag_gemini_whole.py  test_rag_mpnet_whole.py
backend/: constants.py  data_models.py  rag.py
frontend/: app.py  config.py  rag_bot.py
scripts/: chunk_transcripts.py  clean_data.py  deduplicate_files.py  normalize_transcripts.py
